get rate_price and generate layout